<resources>
    <string name="app_name">find movie</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="register">Register</string>
    <string name="fullname">Fullname</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm password</string>
    <string name="have_account_sign_in">Have account? Sign In</string>
    <string name="login">Login</string>
    <string name="welcome_back">Welcome back</string>
    <string name="search">Search</string>
    <string name="my_list">My List</string>
    <string name="recommended">Recommended</string>
    <string name="actors">Actors</string>
    <string name="open_imdb">Open IMDb</string>
    <string name="releaseDateAndLanguage">%1$s, %2$s</string>
    <string name="please_enter_email_and_password">Please enter email and password</string>
    <string name="log_out">Log out</string>
    <string name="do_you_want_to_log_out">do you want to log out?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="all">All</string>
    <string name="recommended_movies">Recommended movies</string>
    <string name="loading">Loading…</string>
    <string name="error_loading_username">Error loading username</string>
    <string name="no_results_found">No results found</string>
    <string name="an_error_occurred">An error occurred</string>
    <string name="movie_added_to_favorites">Movie added to favorites</string>
    <string name="failed_to_add_movie">Failed to add movie: %1$s</string>
    <string name="movie_removed_from_favorites">Movie removed from favorites</string>
    <string name="failed_to_remove_movie">Failed to remove movie: %1$s</string>
    <string name="passwords_do_not_match">Passwords do not match</string>
    <string name="all_fields_are_required">All fields are required</string>
    <string name="error">Error: %1$s</string>
    <string name="errorr">Error: %1$s</string>
</resources>