<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/auth_color">
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".presentation.features.home_page.HomePage"
    android:background="@color/auth_color">

    <com.google.android.material.imageview.ShapeableImageView
        android:layout_width="43dp"
        android:layout_height="43dp"
        android:id="@+id/user_profile_id"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="29dp"
        android:layout_marginStart="15dp"
        android:background="@drawable/icon_main"
        />

    <androidx.appcompat.widget.AppCompatTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/welcome_text"
        app:layout_constraintStart_toEndOf="@id/user_profile_id"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="23dp"
        android:text="@string/welcome_back"
        android:textSize="12sp"
        android:fontFamily="@font/fira_light"
        android:layout_marginStart="12dp"
        android:textColor="@color/welcome_text_color"/>


    <androidx.appcompat.widget.AppCompatTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/user_username"
        app:layout_constraintStart_toEndOf="@id/user_profile_id"
        app:layout_constraintTop_toBottomOf="@id/welcome_text"
        android:textSize="16sp"
        android:textColor="@color/white"
        android:layout_marginStart="12dp"
        />

    <View
        android:layout_width="180dp"
        android:layout_height="50dp"
        android:id="@+id/profile_nav_id"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="24dp"
        />

    <androidx.appcompat.widget.AppCompatEditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/search_bar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/user_profile_id"
        android:layout_marginTop="27dp"
        android:textSize="16sp"
        android:paddingVertical="14dp"
        android:drawableStart="@drawable/search"
        android:paddingHorizontal="12dp"
        android:drawableEnd="@drawable/filter"
        android:background="@drawable/edit_text_custom"
        android:layout_marginHorizontal="43dp"
        android:hint="@string/search"
        android:textColorHint="@color/search_tint"
        android:drawablePadding="12dp"
        android:focusable="false"
        android:clickable="false"
        android:cursorVisible="false"
        android:longClickable="false"
        />


    <androidx.viewpager2.widget.ViewPager2
        android:layout_width="match_parent"
        android:layout_height="154dp"
        android:id="@+id/pager_id"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/search_bar"
        android:layout_marginTop="46dp"
        android:clipChildren="false"
        android:clipToPadding="false"
        android:paddingHorizontal="40dp"
        />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/emptyState"
        android:orientation="vertical"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/search_bar"
        android:layout_marginTop="34dp"
        android:gravity="center"
        android:visibility="gone">

        <ImageView
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:src="@drawable/placeholder"
            android:scaleType="centerCrop"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/no_results_found"
            android:textSize="16sp"
            android:layout_marginTop="16dp"/>

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:id="@+id/my_list_id"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/pager_id"
        android:layout_marginTop="50dp"
        />

    <androidx.appcompat.widget.AppCompatTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/my_list_text"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/pager_id"
        android:text="@string/my_list"
        android:textColor="@color/white"
        android:layout_marginTop="53dp"
        android:layout_marginStart="15dp"
        android:textSize="20sp"/>

    <androidx.appcompat.widget.AppCompatImageButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/my_list_arrow"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/pager_id"
        android:background="@drawable/arrow"
        android:layout_marginTop="61dp"
        android:layout_marginEnd="16dp"
        />


    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/my_list_recycler"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/my_list_text"
        android:layout_marginTop="30dp"
        android:layout_marginHorizontal="16dp"
        android:visibility="visible"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:id="@+id/recommended_movies_id"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/my_list_recycler"
        android:layout_marginTop="50dp"
        />


    <androidx.appcompat.widget.AppCompatTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/recommended_text"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/my_list_recycler"
        android:text="@string/recommended"
        android:textColor="@color/white"
        android:layout_marginTop="53dp"
        android:layout_marginStart="15dp"
        android:textSize="20sp"/>

    <androidx.appcompat.widget.AppCompatImageButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/recommended_arrow"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/my_list_recycler"
        android:background="@drawable/arrow"
        android:layout_marginTop="61dp"
        android:layout_marginEnd="16dp"
        />

    <com.facebook.shimmer.ShimmerFrameLayout
        android:id="@+id/shimmer_recommended"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/recommended_text"
        android:layout_marginTop="30dp"
        android:layout_marginHorizontal="16dp"
        app:shimmer_auto_start="false"
        android:visibility="visible">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="8dp">

            <include layout="@layout/item_movie_placeholder" />
            <include layout="@layout/item_movie_placeholder" />
            <include layout="@layout/item_movie_placeholder" />
        </LinearLayout>
    </com.facebook.shimmer.ShimmerFrameLayout>
    <com.facebook.shimmer.ShimmerFrameLayout
        android:id="@+id/shimmer_my_list"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/my_list_text"
        android:layout_marginTop="30dp"
        android:layout_marginHorizontal="16dp"
        app:shimmer_auto_start="false"
        android:visibility="visible">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="8dp">

            <include layout="@layout/item_movie_placeholder" />
            <include layout="@layout/item_movie_placeholder" />
            <include layout="@layout/item_movie_placeholder" />
        </LinearLayout>
    </com.facebook.shimmer.ShimmerFrameLayout>


    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recommended_recycler"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/recommended_text"
        android:layout_marginTop="30dp"
        android:layout_marginHorizontal="16dp"
        android:visibility="visible"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/emptyStaterecommended"
        android:orientation="vertical"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/recommended_text"
        android:layout_marginTop="24dp"
        android:gravity="center"
        android:visibility="gone">

        <ImageView
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:src="@drawable/placeholder"
            android:scaleType="centerCrop"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/no_results_found"
            android:textSize="16sp"
            android:layout_marginTop="16dp"/>

    </LinearLayout>




    <com.facebook.shimmer.ShimmerFrameLayout
        android:id="@+id/shimmer_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="84dp"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginHorizontal="24dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/user_profile_id"
        app:shimmer_auto_start="false">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <include layout="@layout/item_movie_shimmer"/>
            <include layout="@layout/item_movie_shimmer"/>
            <include layout="@layout/item_movie_shimmer"/>

        </LinearLayout>

    </com.facebook.shimmer.ShimmerFrameLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>